--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Yao Cheng <sz.yaocheng@gmail.com>",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --inline --hot",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --inline --hot --host 0.0.0.0",
     "build": "cross-env NODE_ENV=production webpack --progress"
   },
   "dependencies": {
@@ -22,6 +22,7 @@
     "extract-text-webpack-plugin": "^2.0.0-beta.5",
     "file-loader": "^0.9.0",
     "node-sass": "^4.3.0",
+    "postcss-loader": "^1.2.2",
     "sass-loader": "^4.1.1",
     "vue-loader": "^10.0.0",
     "vue-template-compiler": "^2.1.0",
