Enhance Nav Bar

--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
     "eslint": "^3.14.1",
+    "eslint-config-vue": "^2.0.2",
     "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-vue": "^1.0.0",
     "extract-text-webpack-plugin": "^2.0.0-beta.5",
     "file-loader": "^0.9.0",
     "node-sass": "^4.3.0",
