--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "purecss": "^0.6.2",
     "vue": "^2.1.0",
-    "vue-router": "^2.1.3"
+    "vue-router": "^2.1.3",
+    "vuex": "^2.1.1"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
