--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "cross-env NODE_ENV=production webpack --progress"
   },
   "dependencies": {
+    "axios": "^0.15.3",
     "purecss": "^0.6.2",
     "vue": "^2.1.0",
     "vue-router": "^2.1.3",
