--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "node-sass": "^4.3.0",
     "postcss-loader": "^1.2.2",
     "sass-loader": "^4.1.1",
+    "url-loader": "^0.5.7",
     "vue-loader": "^10.0.0",
     "vue-template-compiler": "^2.1.0",
     "webpack": "^2.2.0",
