--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
+    "jquery": "^3.1.1",
     "purecss": "^0.6.2",
+    "toastr": "^2.1.2",
     "vue": "^2.1.0",
     "vue-router": "^2.1.3",
     "vuex": "^2.1.1"
