--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "purecss": "^0.6.2",
     "toastr": "^2.1.2",
     "vue": "^2.1.0",
+    "vue-chartjs": "^2.3.3",
     "vue-infinite-scroll": "^2.0.0",
     "vue-router": "^2.1.3",
     "vuex": "^2.1.1"
