--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.15.3",
     "jquery": "^3.1.1",
+    "lodash.debounce": "^4.0.8",
     "moment": "^2.17.1",
     "purecss": "^0.6.2",
     "toastr": "^2.1.2",
